<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlAddEdit"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_code.presentation.add_edit_code.AddEditFragment">

    <Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dodaj_kod"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </Toolbar>

    <EditText
        android:inputType="text"
        android:lines="1"
        android:id="@+id/etCodeOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlCode"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/container"
        android:hint="@string/do_kogo_nalezy_kod"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/rlCode"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginStart="34dp"
            android:lines="1"
            android:inputType="number"
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/ibBarcode"
            android:background="@drawable/container"
            android:drawablePadding="5dp"
            android:hint="@string/kod"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <ImageButton
            android:id="@+id/ibBarcode"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_bar_code"
            app:tint="@color/primary"
            android:contentDescription="@string/scan_barcode" />

    </RelativeLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dodaj_wiele_kodow"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rlCode"
        android:layout_marginTop="5dp"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_baseline_save_24"
        android:contentDescription="@string/save_code" />

</RelativeLayout>