<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_code.presentation.codes.CodeActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:title="@string/twoje_kody">

        <ImageButton
            android:id="@+id/ibEditCode"
            android:contentDescription="@string/edit_codes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_gravity="end"
            app:tint="@color/primary" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp2Code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>


    <Button
        android:visibility="gone"
        android:id="@+id/btScanned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/zeskanowano"
        android:textSize="16sp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/add_or_edit_a_code"
        android:src="@drawable/ic_baseline_add_24" />

</RelativeLayout>
